--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Masulik 
+name: Karel Mašek 
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Web o hře World of Warcraft
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://pbs.twimg.com/profile_images/559166887968260096/e-SnfdE1_400x400.jpeg
